--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
-<!-- <app-header2></app-header2>
-<div class="container p-5">
+<app-header></app-header>
+<!-- <div class="container p-5">
     <h1>Popular products</h1>
     <div class="categories">
         <ul class="d-flex ">
