--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,5 +1,4 @@
 .closed {
-    /* background: linear-gradient(90deg, rgba(0, 0, 0, 0.17) 50%, rgba(0, 0, 0, 0.44) 50%); */
     position: relative;
     z-index: 1;
 }
@@ -10,7 +9,8 @@
     right: 0;
     top: 0;
     height: 50%;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.17) 50%, rgba(0, 0, 0, 0.44) 50%);
+    background:var(--overlaycolor);
+    transform: rotateY(180deg);
     position: absolute;
     z-index: -1;
 }
@@ -18,6 +18,7 @@
 :host {
 
     height: 100%;
+    
 }
 
 .closed::after {
@@ -27,7 +28,7 @@
     right: 0;
     bottom: 0;
     height: 50%;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.44) 50%, rgba(0, 0, 0, 0.17) 50%);
+    background:var(--overlaycolor)
 }
 
 #signin-window,
@@ -51,20 +52,20 @@
 
 input {
     border-radius: 22px;
-    border: 1px solid #C2C2C3;
+    border: 1px solid var(--bordercolor);
     background: #F5F3F3;
 }
 
-input [type="text"]:focus {
+input[type=text]:focus,input[type=email]:focus,input[type=password]:focus  {
     appearance: none;
     box-shadow: none;
     background: #F5F3F3;
-    border: 1px solid #C2C2C3;
+    border: 1px solid var(--bordercolor);
 }
 
 .title {
     font-family: Abhaya Libre;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+    border-bottom: 1px solid var(--bordercolor);
     width: fit-content;
     margin-bottom: 30px;
 }
@@ -77,8 +78,8 @@ input [type="text"]:focus {
 
 .special-btn {
     border-radius: 22px;
-    border: 1px solid #484848;
-    background: #484848;
+    border: 1px solid var(--bordercolor);
+    background: var(--btncolor);
     color: var(--fontcolor);
     text-align: center;
     font-size: 18px;
@@ -121,4 +122,11 @@ input [type="text"]:focus {
     color: #d50909;
     font-size: 25px;
     font-weight: 500;
+}
+#passwordHelp,#confirmPasswordHelp{
+    right: 40px;
+}
+a{
+    display: block;
+    text-align: center;
 }
