--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -37,12 +37,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-xl-4 col-lg-3 col-sm-12">
-                <div class="google-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13818.508382520897!2d31.251179599999997!3d30.0188622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1458474aefef8513%3A0x57026e1b86877bcf!2z2YXYp9mD2K_ZiNmG2KfZhNiv2LI!5e0!3m2!1sar!2seg!4v1668192098992!5m2!1sar!2seg" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
-            <div class="copyright col-lg-12 text-left border-top pt-3 mt-2">
+
+            <div class="copyright col-lg-12 text-left pt-3 mt-2">
                 Copyright ©<span id="date"></span> All rights reserved | This template is made with <a href="">DG</a>
             </div>
         </div>
