--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,6 @@ body
 }
 main
 {
-    padding: 70px 0;
     min-height: 55vh;
     height: fit-content;
 }
@@ -20,6 +19,10 @@ img
     --mode:black;
     --sliderwidth:-40px;
     --window-width:1536px;
-    --bordercolor:rgba(255, 255, 255, 0.249)
+    --bordercolor:rgba(39, 39, 39, 0.137);
+    --navbarcolor:rgb(33, 33, 33);
+    --btncolor:#484848;
+    --overlaycolor: linear-gradient(90deg, rgba(0, 0, 0, 0.44) 50%, rgba(0, 0, 0, 0.17) 50%);
+    --headerbgColor:rgba(199, 250, 167, 0.64) 0%, rgba(190, 255, 150, 0.60) 44.89%, rgba(255, 255, 255, 0.68) 99.99%;
 }
 
