--- a/src/app/pages/verification/verification.component.html
+++ b/src/app/pages/verification/verification.component.html
@@ -1,5 +1,9 @@
-<div class="container">
-    <div class="row justify-content-center align-items-center">
-        <h1 class="text-white text-center">Waiting for verification</h1>
+<div class="container VE-container">
+    <div class="row justify-content-center align-items-center text-white text-center text-capitalize">
+        <h1 class="">congratulations
+            <fa-icon [icon]="fashake"></fa-icon>
+        </h1>
+        <p>{{message}}</p>
+        <button class="btn btn-primary" style="width: fit-content;">Sign In</button>
     </div>
 </div>
