Working on reset password service

--- a/src/app/pages/verification/verification.component.html
+++ b/src/app/pages/verification/verification.component.html
@@ -4,6 +4,6 @@
             <fa-icon [icon]="fashake"></fa-icon>
         </h1>
         <p>{{message}}</p>
-        <button class="btn btn-primary" style="width: fit-content;">Sign In</button>
+        <button class="btn btn-primary" (click)="redirectToSignIn()">Sign In</button>
     </div>
 </div>
