--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -146,7 +146,7 @@
                         <div class="mb-3">
                             <button class="special-btn">Login</button>
                         </div>
-                        <a>Forget Password?</a>
+                        <a routerLink="/forgettenpassword">Forget Password?</a>
                     </form>
                 </div>
             </div>
