--- a/src/app/authentication/resetpassword/resetpassword.component.css
+++ b/src/app/authentication/resetpassword/resetpassword.component.css
@@ -1,5 +1,5 @@
 .reset-password{
-    background-image: url('../../assets/Images/ForgetPass.png');
+    background-image: url('/assets/Images/ForgetPass.png');
     height: 500px;
     background-position: bottom;
     background-size: contain;
