working on style of navbar and header in the home page

--- a/src/app/components/lightning/lightning.component.html
+++ b/src/app/components/lightning/lightning.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex position-absolute top-0 bottom-0 justify-content-center " style="right: 0;">
-    <div class="col-xl-4">
+    <div class="col-xl-4 col-md-4">
         <img id="bulb" [src]="'../../assets/Images/' + bulb + '.png'">
     </div>
-    <div class="col-xl-2 position-relative overflow-hidden">
+    <div class="col-xl-2 col-md-2 position-relative overflow-hidden">
         <img (click)="changebulb()" class="position-absolute" id="cord" src="../../assets/Images/cord.png">
 
     </div>
