--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -30,3 +30,8 @@ h1{
     border: 0;
     border-radius: 0;
 }
+@media only screen and (max-width: 1024) {
+    body {
+      background-color: lightblue;
+    }
+  } 
