--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <!-- <canvas id="canvas"></canvas> -->
-    <div class="container">
+    <div class="container py-4">
         <div class="row align-items-center">
-            <div class="col-xl-6">
+            <div class="col-xl-6 col-md-6">
                <div class="glass px-4 py-5 rounded-5">
                 <h3 class="">Furniture At Cost</h3>
                 <p class="ps-3">
@@ -17,7 +17,7 @@
                 </div>
                </div> 
             </div>
-            <div class="col-xl-6">
+            <div class="col-xl-6 col-md-6">
                 <app-lightning></app-lightning>
                 <img src="/assets/Images/1.png">
             </div>
