working on navbar responsive

--- a/src/app/components/resetpasswordform/resetpasswordform.component.css
+++ b/src/app/components/resetpasswordform/resetpasswordform.component.css
@@ -1,5 +1,5 @@
 .pp{
-    background-image: url('../../assets/Images/ForgetPass.png');
+    background-image: url('/assets/Images/ForgetPass.png');
     height: 500px;
     background-position: bottom;
     background-size: contain;
