--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <span class="navbar-brand" href="#">
     <img id="logo" src="../../assets/Images/Logo/logo.png">
   </span>
-  <div class="d-flex" style="width:90%">
+  <div class="d-flex main-nav">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav w-100 justify-content-around">
         <li class="nav-item d-flex align-items-baseline">
@@ -26,9 +26,9 @@
       </ul>
     </div>
     
-    <ul class="navbar-nav w-100 justify-content-evenly">
+    <ul class="d-flex w-100 align-items-center m-0 justify-content-evenly">
       <li class="position-relative rounded-5 overflow-hidden " style="width: 70%;">
-        <button class="btn position-absolute border-0 rounded-0 text-bg-dark bottom-0 top-0" style="right: 0;"><i
+        <button class="btn position-absolute border-0 rounded-5 text-bg-dark bottom-0 top-0" style="right: 0;"><i
             class="fa-solid fa-magnifying-glass"></i></button>
         <input type="text" class="rounded-5 border-0 form-control w-100" placeholder="Search">
       </li>
