--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -98,3 +98,26 @@ li{
 .username{
     color:var(--fontcolor)
 }
+.navbar-toggler{
+    background-color: rgba(255, 255, 255, 0.619);
+    padding: 0;
+    border:1px solid black
+}
+.main-nav{
+    width: 90%;
+}
+@media screen and (max-width:1024px) {
+    #navbarSupportedContent .navbar-nav{
+        display: none;
+    } 
+    .navbar-toggler{
+        display: block;
+    }
+
+}
+@media screen and (max-width:991px) {
+    .main-nav{
+        width: 70%;
+    }
+
+}
