--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,14 @@
 <nav class="navbar navbar-expand-lg  align-items-center">
-    <span class="navbar-brand" href="#">
-        <img id="logo" src="../../../assets/logo.png">
-    </span>
+    <div class="logo">
+        <span class="navbar-brand" href="#">
+            <img id="logo" src="../../../assets/logo.png">
+        </span>
+    </div>
+    <div class="user">
+        <button class="rounded-5 btn border text-white me-3">
+            <fa-icon [icon]="userIcon"></fa-icon>
+        </button>
+    </div>
+  
 
 </nav>
