--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,28 +1,28 @@
 <div class="d-flex flex-column flex-shrink-0 px-2 text-white sidebar">
     <ul class="nav nav-pills flex-column mb-auto text-center">
       <li> 
-        <a href="#"  class="nav-link text-white " routerLinkActive="activehttps://ms-edgedevtools.gallerycdn.vsassets.io/extensions/ms-edgedevtools/vscode-edge-devtools/2.1.3/1690483894200/Microsoft.VisualStudio.Services.Icons.Default" [routerLink]="['dashboard']" aria-current="page">
+        <a href="/dashboard" title="dashboard"  class="nav-link text-white " routerLinkActive="active" [routerLink]="['dashboard']" aria-current="page">
           <fa-icon [icon]="chartPieIcon"> </fa-icon>
         </a>
       </li>
       <li>
-        <a routerLinkActive="active"  [routerLink]="['employee']" class="nav-link text-white">
+        <a routerLinkActive="active" title="users"  [routerLink]="['users']" class="nav-link text-white">
           <fa-icon [icon]="userIcon"> </fa-icon>
         </a>
       </li>
       <li>
-        <a routerLinkActive="active"  [routerLink]="['employee']" class="nav-link text-white">
+        <a routerLinkActive="active" title="mail"  [routerLink]="['mail']" class="nav-link text-white">
           <fa-icon [icon]="envlopeIcon"> </fa-icon>
         </a>
       </li>
       <li>
-        <a routerLinkActive="active"  [routerLink]="['employee']" class="nav-link px-1 text-white">
+        <a routerLinkActive="active" title="furniture"  [routerLink]="['furniture']" class="nav-link px-1 text-white">
           <fa-icon [icon]="homeIcon1" class="me-1"> </fa-icon>
           <fa-icon [icon]="homeIcon2"> </fa-icon>
         </a>
       </li>
       <li>
-        <a routerLinkActive="active"  [routerLink]="['employee']" class="nav-link px-1 text-white">
+        <a routerLinkActive="active" title="settings"  [routerLink]="['settings']" class="nav-link px-1 text-white">
           <i class="fa-solid fa-gear"></i>
         </a>
       </li>
