--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,21 @@
-<p>dashboard works!</p>
+<div class="container pt-4">
+    <div class="top-section">
+        <app-top-widgets> </app-top-widgets>
+    </div>
+    <div class="middle-section d-flex">
+        <div class="widget left">
+            <app-sales-by-month></app-sales-by-month>
+        </div>
+        <div class="widget right">
+            <app-sales-by-category></app-sales-by-category>
+        </div>
+    </div>
+    <div class="bottom-section d-flex">
+        <div class="widget left">
+            <app-sales-by-last-few-transactions></app-sales-by-last-few-transactions>
+        </div>
+        <div class="widget right">
+            <app-top-three-products></app-top-three-products>
+        </div>
+    </div>
+</div>
